[gd_scene load_steps=4 format=3 uid="uid://435ga27ellrf"]

[ext_resource type="Script" path="res://Scripts/center_plate_game.gd" id="1_oq8gt"]
[ext_resource type="Texture2D" uid="uid://co6lq6wxk8i06" path="res://Assets/foods/utensil/plate.svg" id="1_vi08t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jcovg"]
radius = 32.0

[node name="centerPlateGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_oq8gt")

[node name="plate" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.00179875
texture = ExtResource("1_vi08t")
stretch_mode = 5

[node name="centerArea" type="Area2D" parent="."]

[node name="centerAreaShape" type="CollisionShape2D" parent="centerArea"]
shape = SubResource("CircleShape2D_jcovg")

[node name="centerTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="centerArea" to="." method="_on_center_area_area_entered"]
[connection signal="area_exited" from="centerArea" to="." method="_on_center_area_area_exited"]
[connection signal="timeout" from="centerTimer" to="." method="_on_center_timer_timeout"]
